--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -3,7 +3,7 @@ name: First Workflow
 on: workflow_dispatch                # Controls when the workflow will run
 jobs:                               # A workflow run is made up of one or more jobs that can run sequentially or in parallel
   first-job:
-    runs-on: 
+    runs-on: ubuntu-latest
     steps:                          # Steps represent a sequence of tasks that will be executed as part of the job
       - name: Print greeting
         run: echo "Hello Cap"
