--- a/.github/workflows/first-action.yml
+++ b/.github/workflows/first-action.yml
@@ -1,6 +1,8 @@
 # This is a basic workflow to help you get started with Actions
 name: First Workflow
-on: workflow_dispatch                # Controls when the workflow will run
+
+on: 
+  workflow_dispatch:                # Controls when the workflow will run
 jobs:                               # A workflow run is made up of one or more jobs that can run sequentially or in parallel
   first-job:
     runs-on: ubuntu-latest
@@ -9,9 +11,6 @@ jobs:                               # A workflow run is made up of one or more j
         run: echo "Hello Cap"
       - name: Print goodbye
         run: echo "Done - bye!"
-
-        
-
 
 
 
